Fix spacing and sizing for supernova and supernova-item blocks

--- a/packages/block-library/src/blocks/supernova-item/style.scss
+++ b/packages/block-library/src/blocks/supernova-item/style.scss
@@ -11,6 +11,20 @@
   }
 }
 
+.nb-supernova-item.nb-supernova-item--layout-stacked {
+  --nb-block-minimum-height: calc(var(--nb-minimum-container-height) - var(--admin-bar-height, 0px));
+  min-height: var(--nb-block-minimum-height);
+
+  &.nb-supernova-item--scrolling-effect-doppler {
+    --nb-block-minimum-height: calc(2 * var(--nb-minimum-container-height) - var(--admin-bar-height, 0px));
+  }
+
+  .nb-supernova-item__content {
+    min-height: calc(var(--nb-minimum-container-height) - var(--admin-bar-height, 0px));
+  }
+}
+
+
 /*
  * Currently Slick is applying display: inline-block.
  * Until we find a solution for that,
